@@ -17,6 +17,20 @@ BINSEARCHPATH=/usr/bin:/bin:/usr/local/bin
 DATASEARCHPATH=/usr/share:/usr/local/share:/usr/lib:/usr/local/lib:/opt
 LIBSEARCHPATH=/usr/lib:/lib:/usr/local/lib:/opt
 
+dnl Get the operating system and version number...
+uname=`uname`
+uversion=`uname -r | sed -e '1,$s/[[^0-9]]//g'`
+if test x$uname = xIRIX64; then
+  uname="IRIX"
+fi
+
+if test x$uname = xIRIX; then
+  SYSCONFSEARCHPATH="/usr/freeware/etc:$SYSCONFSEARCHPATH"
+  BINSEARCHPATH="/usr/freeware/bin:$BINSEARCHPATH"
+  DATASEARCHPATH="/usr/freeware/share:$DATASEARCHPATH"
+  LIBSEARCHPATH="/usr/freeware/lib32:/usr/freeware/lib:$LIBSEARCHPATH"
+fi
+
 dnl Check for Perl
 AC_PATH_PROGS(PERL,perl,/usr/bin/perl,$BINSEARCHPATH)
 
