@@ -1,3 +1,7 @@
+2003-06-26  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* configure.in, makeMan.in, foomatic-rip.in: Support for IRIX.
+
 2003-06-25  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* foomatic-rip.in: Let "echo" commands in the renderer command line
